syntax = "proto2";

import "api/stats/events.proto";
import "api/stats/ball_stats.proto";
import "api/stats/kickoff.proto";
import "api/stats/dropshot.proto";
package api.stats;


message GameStats {
    repeated api.stats.Hit hits = 1;
    optional float neutral_possession_time = 2;
    repeated api.stats.Bump bumps = 3;
    optional api.stats.BallStats ball_stats = 4;
    repeated api.stats.Kickoff kickoffs = 5;
    repeated api.stats.RumbleItemEvent rumble_items = 6;
    repeated api.stats.KickoffStats kickoff_stats = 7;
    repeated api.stats.BallCarry ball_carries = 8;
    optional api.stats.DropshotGameStats dropshot_stats = 9;
    repeated api.stats.FiftyFifty fifty_fifties = 10;
}
